# Open-Breaker-3D

./: .gitignore  Alkalmazas.cpp  Alkalmazas.h  Application.cpp  Application.h  Appsettings.cpp  Appsettings.h  Ball.cpp  Ball.h  BallBreaker3D2016.cbp  BallBreaker3D2016.depend  BallBreaker3D2016.layout  Block.cpp  Block.h  CMakeLists.txt  Coord.h  FX_Racer.depend  FX_Racer.layout  FileManager.cpp  FileManager.h  Game.cpp  Game.h  Hang.cpp  Hang.h  Jatek.cpp  Jatek.h  Level.cpp  Level.h  Makefile  Menu.cpp  Menu.h  Model.cpp  Model.h  Object.cpp  Object.h  OpenBreaker3D.cbp  Panel.cpp  Panel.h  Player.cpp  Player.h  (+20 more)
Levels/: L1.txt  L10.txt  L11.txt  L12.txt  L13.txt  L14.txt  L15.txt  L16.txt  L17.txt  L18.txt  L19.txt  L2.txt  L20.txt  L3.txt  L4.txt  L5.txt  L6.txt  L7.txt  L8.txt  L9.txt  Packages.txt
Music/: 6.mid
fonts/english/: Thumbs.db
fonts/hungarian/: Thumbs.db
helpers/: foreach.h  sconvert.h  unique_ptr.h
